--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^13.0.10",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.8.0",
